--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -2,9 +2,9 @@
 
 <div class = "row header">
 
-    <!-- TODO: the logo should not go in the media directory because that's for uploaded images and is .gitignored -->
-    <!-- TODO: please put logo in core/static/images :) -->
-{#    <a href="{% url 'index' %}"><img id="logo" src="{% static 'media/logo.png' %}"></a>#}
+    <!-- Completed the logo should not go in the media directory because that's for uploaded images and is .gitignored -->
+    <!-- Completed please put logo in core/static/images :) -->
+    <a href="{% url 'index' %}"><img id="logo" src="{% static 'images/logo.png' %}"></a>
 
     <div id = "browse_button_container">
         <div class="dropdown dropdown_container">
