--- a/core/templates/core/main/content.html
+++ b/core/templates/core/main/content.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% load static %}
 <!------
 
 My recipes shows recipes not created by the user
@@ -10,19 +11,19 @@ Can't add ingridients, directions, from backend when adding recipes
 
 {% block content %}
 
-<div class = "row featured_section">
+    <div class="row featured_section">
 
-</div>
+    </div>
 
-<div class = "row quick_filter_buttons_row">
- <div class="button_container">
-    <a class="quick_filter_buttons {% if explore == 'featured' %}active{% endif %}" href="{% url 'featured' %}">Featured</a>
-    <a class="quick_filter_buttons {% if explore == 'popular' %}active{% endif %}" href="{% url 'popular' %}">Popular</a>
-    <a class="quick_filter_buttons {% if explore == 'trending' %}active{% endif %}" href="{% url 'trending' %}">Trending</a>
-    <a class="quick_filter_buttons {% if explore == 'new' %}active{% endif %}" href="{% url 'new' %}">New</a>
-    <a class="quick_filter_buttons {% if explore == 'categories' %}active{% endif %}" href="{% url 'categories' %}">Categories</a>
- </div>
-</div>
+    <div class = "row quick_filter_buttons_row">
+        <div class="button_container">
+            <a class="quick_filter_buttons {% if explore == 'featured' %}active{% endif %}" href="{% url 'featured' %}">Featured</a>
+            <a class="quick_filter_buttons {% if explore == 'popular' %}active{% endif %}" href="{% url 'popular' %}">Popular</a>
+            <a class="quick_filter_buttons {% if explore == 'trending' %}active{% endif %}" href="{% url 'trending' %}">Trending</a>
+            <a class="quick_filter_buttons {% if explore == 'new' %}active{% endif %}" href="{% url 'new' %}">New</a>
+            <a class="quick_filter_buttons {% if explore == 'categories' %}active{% endif %}" href="{% url 'categories' %}">Categories</a>
+        </div>
+    </div>
 
 <div class="row container-fluid recipe_container">
     {% block main %}{% endblock %}
