--- a/core/templates/core/recipes/recipe_list.html
+++ b/core/templates/core/recipes/recipe_list.html
@@ -10,30 +10,13 @@
             {% endif %}
             <p class="text-dark recipe_block_recipe_title">{{ recipe.name }}</p>
             <div id ="recipe_block_info">
-                {% block script %}
-                    <script type="text/javascript">
-                        /*
-                        The code blow gets the avg rating of the recipe from models.p, then multiplies it by 30
-                        to get a value that can represent the correct number of start it then adds that value into
-                        the css file as a width variable of .start-rating-top class this class highlight the stars
-                        in a gold yellow color.
-
-                        To test if it works when there are no ratings just hardcode a rating value between 0-5 in
-                        models.py in the avg_rating method in the Recipe class. EX: if result is None: return 2.5
-                        */
-
-                        var starRating = {{ recipe.avg_rating }}*30;
-                        // set the width of the stars to be highlighted gold yellow
-                        $('.star-ratings-top').width(starRating+'%');
-                    </script>
-                {% endblock %}
                 <div class="star-ratings">
-                    <div class="star-ratings-top"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                    <div class="star-ratings-top" style="width: {{ recipe.avg_percent_rating }}"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
                     <div class="star-ratings-bottom"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
                 </div>
                 <p>
                     By: {{ recipe.user.username }}<br>
-                    Description: {{ recipe.summary }}<br>
+                    Description: {{ recipe.summary }}
                 </p>
             </div>
         </a>
