--- a/core/templates/core/main/content.html
+++ b/core/templates/core/main/content.html
@@ -3,48 +3,31 @@
 {% block content %}
 
     <div class="slideshow-container">
+    {% for recipe in recipe_list %}
+        <div class="mySlides fade">
+          <div class="numbertext">{{ forloop.counter }} / 3</div>
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
+            {% if forloop.first %}
+                <img style="width:100%" src="{% static recipe.image.url %}">
+            {% elif forloop.counter0 %}
+                <img style="width:100%" src="{% static recipe.image.url %}">
+            {% endif %}
 
-    {% if recipe.image and is_featured %}
-        <img style="width:100%" src="{% static recipe.image.url %}">
-    {% endif %}
+          <div class="text">Caption Text</div>
+        </div>
+    {% endfor %}
 
-  <div class="text">Caption Text</div>
-</div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+    </div>
+    <br>
 
-     {% if recipe.image and is_featured %}
-        <img class="recipeviewimage" style="width:100%" src="{% static recipe.image.url %}">
-    {% endif %}
-
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-
-    {% if recipe.image and is_featured %}
-        <img class="recipeviewimage" style="width:100%" src="{% static recipe.image.url %}">
-    {% endif %}
-
-  <div class="text">Caption Three</div>
-</div>
-
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
 
 
     <div class = "row quick_filter_buttons_row">
@@ -65,10 +48,12 @@
         var slideIndex = 1;
         showSlides(slideIndex);
 
+        // Next/previous controls
         function plusSlides(n) {
           showSlides(slideIndex += n);
         }
 
+        // Thumbnail image controls
         function currentSlide(n) {
           showSlides(slideIndex = n);
         }
@@ -88,6 +73,7 @@
           slides[slideIndex-1].style.display = "block";
           dots[slideIndex-1].className += " active";
         }
+
     </script>
 
 {% endblock %}
