--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -4,11 +4,11 @@
 
     <!-- Completed the logo should not go in the media directory because that's for uploaded images and is .gitignored -->
     <!-- Completed please put logo in core/static/images :) -->
-    <a href="{% url 'index' %}"><img id="logo" src="{% static 'images/logo.png' %}"></a>
+    <a href="{% url 'index' %}"><img id="logo" src="{% static 'images/Logo1.jpg' %}"></a>
 
     <div id = "browse_button_container">
         <div class="dropdown dropdown_container">
-            <a href="#" class="dropdown-toggle browse_button" data-toggle="dropdown">BROWSE</a>
+            <a href="#" class="btn btn-primary dropdown-toggle browse_button" data-toggle="dropdown">BROWSE</a>
             <ul class="dropdown-menu mega-dropdown-menu">
                 <li class="col-sm-3">
                     <ul>
