--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -9,117 +9,10 @@ p:hover, p:visited, p:active, a:hover, a:visited, a:link, a:active
 {
     text-decoration: none !important;
 }
-:root{
-    --header_top_margin: 30px;
-    --header_obj_heights: 40px;
-}
 
-
-/******************************************** Header *********************************************/
-.header{
-    background-color: white;
-    margin-left: 0;
-    height: 90px;
+:root {
+    --primary: #ff8500 !important;
 }
-
-#logo{
-    margin-left: 20px;
-    padding: 10px;
-    width: 75px;
-    height: 90px;
-}
-.login_signup_buttons_container{
-    position: absolute !important;
-    right: 1%;
-}
-.login_signup_buttons{
-    margin-top: var(--header_top_margin);
-    height: var( --header_obj_heights);
-}
-#my_account_button{
-    color: white;
-
-}
-.searchbar_container{
-    margin-top: var(--header_top_margin);
-    margin-left: 2%;
-}
-#searchbar, .searchbar_container{
-    width: 600px;
-    height: var( --header_obj_heights);
-
-}
-.magnifyin_glass{
-    background-color: rgba(33, 32, 33, 0.29);
-    margin-left: -61px;
-    border: none;
-    border-bottom-right-radius: 3px;
-    border-top-right-radius: 3px ;
-    width: 10%;
-    margin-top: 1px;
-    height: 38px;
-}
-.magnifyin_glass:hover{
-    background-color: rgb(104, 198, 255);
-}
-.magnifyin_glass:active{
-    background-color: rgb(29, 135, 255);
-}
-
-
-/*-------- DROP DOWN MENU START ------*/
-
-#browse_button_container{
-    margin-top: var(--header_top_margin);
-    margin-left: 15%;
-    width: 100px;
-    height: var(--header_obj_heights);
-    border-radius: 3px;
-    /*padding: 10px;*/
-}
-
-.browse_button{
-    color: black;
-    font-size: 15px;
-    margin-left: 10px;
-    position: center;
-    height: var(--header_obj_heights);
-}
-.dropdown_container{
-   margin-left: -10px;
-   padding-bottom: 26px;
-}
-.mega-dropdown-menu {
-    width: 750px;
-    box-shadow: none;
-    -webkit-box-shadow: none;
-}
-.mega-dropdown-menu > li > ul {
-  padding: 10px;
-  margin: 0;
-}
-.mega-dropdown-menu > li > ul > li {
-  list-style: none;
-}
-.mega-dropdown-menu > li > ul > li > a {
-  display: block;
-  color: #222;
-  padding: 3px 5px;
-}
-.mega-dropdown-menu > li > ul > li > a:hover {
-    background-color: #dddddd;
-}
-.mega-dropdown-menu .dropdown-header {
-  font-size: 18px;
-  color: #2846ff;
-  padding: 5px 60px 5px 5px;
-  line-height: 30px;
-}
-
-/*------- DROP DOWN MENU END ------*/
-
-/*************************************** Header END ***********************************/
-
 
 /****************************************** Body *********************************************/
 
