--- a/core/static/core/bootstrap/scss/_variables.scss
+++ b/core/static/core/bootstrap/scss/_variables.scss
@@ -70,7 +70,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       $orange !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
