--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -10,7 +10,7 @@
         <div class="dropdown dropdown_container">
             <a href="#" class="btn btn-primary dropdown-toggle browse_button" data-toggle="dropdown">BROWSE</a>
             <ul class="dropdown-menu mega-dropdown-menu">
-                <li class="col-sm-3">
+                <li class="col-lg-3">
                     <ul>
                         <li class="dropdown-header">Category 1</li>
                         <li><a href="#">Col 1 Row 1</a></li>
@@ -25,7 +25,7 @@
 
                     </ul>
                 </li>
-                <li class="col-sm-3">
+                <li class="col-lg-3">
                     <ul>
                         <li class="dropdown-header">Category 3</li>
                         <li><a href="#">Col 2 Row 1</a></li>
@@ -39,7 +39,7 @@
                         <li><a href="#">Col 2 Row 6</a></li>
                     </ul>
                 </li>
-                <li class="col-sm-3">
+                <li class="col-lg-3">
                     <ul>
                         <li class="dropdown-header">Category 5</li>
                         <li><a href="#">Col 3 Row 1</a></li>
@@ -53,7 +53,7 @@
                         <li><a href="#">Col 3 Row 6</a></li>
                     </ul>
                 </li>
-                <li class="col-sm-3">
+                <li class="col-lg-3">
                     <ul>
                         <li class="dropdown-header">Category 7</li>
                         <li><a href="#">Col 4 Row 1</a></li>
