--- a/core/templates/registration/signup.html
+++ b/core/templates/registration/signup.html
@@ -3,7 +3,7 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="col-lg-offset-4 col-lg-5 container">
     <h1>Sign up</h1>
 
     {% if form.errors %}
