--- a/core/static/core/bootstrap/scss/_variables.scss
+++ b/core/static/core/bootstrap/scss/_variables.scss
@@ -71,7 +71,7 @@ $colors: map-merge(
 );
 
 $primary:       $orange !default;
-$secondary:     $gray-600 !default;
+$secondary:     $cyan !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
