--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,6 +20,15 @@
 
     {% block content %}{% endblock %}
 
+    <footer class="footer">
+        <div class="container-fluid">
+            <span class="text-muted">
+                &copy; 2018 Muhammet Barut, Walker Crouse, Ziming Dong<br>
+                A Final Project for CS 205, Fall 2018, Prof. Jason Hibbeler
+            </span>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
