--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -22,67 +22,32 @@
     </div>
 
     <div id = "browse_button_container">
-        <div class="dropdown dropdown_container">
+        <div class=" browse_button_container dropdown dropdown-menu-right">
             <a href="#" class="btn btn-primary dropdown-toggle browse_button" data-toggle="dropdown">Browse</a>
-            <ul class="dropdown-menu mega-dropdown-menu">
-                <li class="col-lg-3">
-                    <ul>
-                        <li >Category 1</li>
-                        <li><a href="#">Col 1 Row 1</a></li>
-                        <li><a href="#">Col 1 Row 2</a></li>
-                        <li><a href="#">Col 1 Row 3</a></li>
-                        <li><a href="#">Col 1 Row 4</a></li>
+            <table class="dropdown-menu-right dropdown-menu">
 
-                        <li class="divider"></li>
-                        <li>Category 2</li>
-                        <li><a href="#">Col 1 Row 5</a></li>
-                        <li><a href="#">Col 1 Row 6</a></li>
+                <tr>
+                <th>Category 1</th>
+                <th>Category 2</th>
+                <th>Category 3</th>
+                </tr>
+                <tr>
+                <td><a href="#">Row 1 Col 1</a></td>
+                <td><a href="#">Row 1 Col 2</a></td>
+                <td><a href="#">Row 1 Col 3</a></td>
+                </tr>
+                <tr>
+                <td><a href="#">Row 2 Col 1</a></td>
+                <td><a href="#">Row 2 Col 2</a></td>
+                <td><a href="#">Row 2 Col 3</a></td>
+                </tr>
+                <tr>
+                <td><a href="#">Row 3 Col 1</a></td>
+                <td><a href="#">Row 3 Col 2</a></td>
+                <td><a href="#">Row 3 Col 3</a></td>
+                </tr>
 
-                    </ul>
-                </li>
-                <li class="col-lg-3">
-                    <ul>
-                        <li >Category 3</li>
-                        <li><a href="#">Col 2 Row 1</a></li>
-                        <li><a href="#">Col 2 Row 2</a></li>
-                        <li><a href="#">Col 2 Row 3</a></li>
-                        <li><a href="#">Col 2 Row 4</a></li>
-
-                        <li class="divider"></li>
-                        <li >Category 4</li>
-                        <li><a href="#">Col 2 Row 5</a></li>
-                        <li><a href="#">Col 2 Row 6</a></li>
-                    </ul>
-                </li>
-                <li class="col-lg-3">
-                    <ul>
-                        <li >Category 5</li>
-                        <li><a href="#">Col 3 Row 1</a></li>
-                        <li><a href="#">Col 3 Row 2</a></li>
-                        <li><a href="#">Col 3 Row 3</a></li>
-                        <li><a href="#">Col 3 Row 4</a></li>
-
-                        <li class="divider"></li>
-                        <li >Category 6</li>
-                        <li><a href="#">Col 3 Row 5</a></li>
-                        <li><a href="#">Col 3 Row 6</a></li>
-                    </ul>
-                </li>
-                <li class="col-lg-3">
-                    <ul>
-                        <li >Category 7</li>
-                        <li><a href="#">Col 4 Row 1</a></li>
-                        <li><a href="#">Col 4 Row 2</a></li>
-                        <li><a href="#">Col 4 Row 3</a></li>
-                        <li><a href="#">Col 4 Row 4</a></li>
-
-                        <li class="divider"></li>
-                        <li >Category 8</li>
-                        <li><a href="#">Col 4 Row 5</a></li>
-                        <li><a href="#">Col 4 Row 6</a></li>
-                    </ul>
-                </li>
-            </ul>
+            </table>
         </div>
     </div>
 
@@ -91,19 +56,18 @@
             <a href="{% url 'login' %}" role="button" class="btn btn-primary login_signup_buttons">Log in</a>
             <a href="{% url 'signup' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign up</a>
         {% else %}
-            <div class="btn btn-primary login_signup_buttons dropdown pull-right">
-                <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">
+
+            <div class=" btn btn-primary login_signup_buttons pull-right dropdown ">
+              <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">
                     {{ request.user.username }}
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a>Signed in as <strong>{{ request.user.username }}</strong></a></li>
-                    <li class="divider"></li>
-                    <li><a href="{% url 'user_profile' request.user.username %}">Your profile</a></li>
-                    <li><a href="{% url 'user_recipes' request.user.username %}">Your recipes</a></li>
-                    <li class="divider"></li>
-                    <li><a href="{% url 'preferences' %}">Preferences</a></li>
-                    <li><a href="{% url 'logout' %}">Sign out</a></li>
-                </ul>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Signed in as <strong>{{ request.user.username }}</strong></a>
+                <a class="dropdown-item" href="{% url 'user_profile' request.user.username %}">Your profile</a>
+                <a class="dropdown-item" href="{% url 'user_recipes' request.user.username %}">Your recipes</a>
+                  <a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a>
+                <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
+              </div>
             </div>
         {% endif %}
     </span>
