--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -27,24 +27,24 @@
             <table class="dropdown-menu-right dropdown-menu">
 
                 <tr>
-                <th>Category 1</th>
-                <th>Category 2</th>
-                <th>Category 3</th>
+                <th class = "dropdown_category_text">Category 1</th>
+                <th class = "dropdown_category_text">Category 2</th>
+                <th class = "dropdown_category_text">Category 3</th>
                 </tr>
                 <tr>
-                <td><a href="#">Row 1 Col 1</a></td>
-                <td><a href="#">Row 1 Col 2</a></td>
-                <td><a href="#">Row 1 Col 3</a></td>
+                <td><a class = "menu_item" href="#">Row 1 Col 1</a></td>
+                <td><a class = "menu_item" href="#">Row 1 Col 2</a></td>
+                <td><a class = "menu_item" href="#">Row 1 Col 3</a></td>
                 </tr>
                 <tr>
-                <td><a href="#">Row 2 Col 1</a></td>
-                <td><a href="#">Row 2 Col 2</a></td>
-                <td><a href="#">Row 2 Col 3</a></td>
+                <td><a class = "menu_item"  href="#">Row 2 Col 1</a></td>
+                <td><a class = "menu_item"  href="#">Row 2 Col 2</a></td>
+                <td><a class = "menu_item"  href="#">Row 2 Col 3</a></td>
                 </tr>
                 <tr>
-                <td><a href="#">Row 3 Col 1</a></td>
-                <td><a href="#">Row 3 Col 2</a></td>
-                <td><a href="#">Row 3 Col 3</a></td>
+                <td><a class = "menu_item"  href="#">Row 3 Col 1</a></td>
+                <td><a class = "menu_item"  href="#">Row 3 Col 2</a></td>
+                <td><a class = "menu_item"  href="#">Row 3 Col 3</a></td>
                 </tr>
 
             </table>
