--- a/core/templates/core/recipes/recipe_detail.html
+++ b/core/templates/core/recipes/recipe_detail.html
@@ -6,9 +6,10 @@
 
 {% block content %}
 
+<div class="holder">
 <div class="container">
 
-    <div class=" board">
+    <div class="board">
         <h1 id="recipename"> {{ recipe.name }} </h1>
         <p id="name">By-{{ recipe.user.username }}</p>
         <h1 id="rating"> Rating: {{ recipe.avg_rating }}</h1>
@@ -79,7 +80,7 @@
 </div>
 
     {% if can_review %}
-        <div class="relative">
+        <div class="col-6 relative">
             <h1>Leave a review</h1>
             <form action="{% url 'submit_review' recipe.id %}" method="post">
                 {% csrf_token %}
@@ -97,6 +98,9 @@
                 </div>
             </form>
         </div>
+
+
+</div>
     {% endif %}
 
 
